--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@fortawesome/vue-fontawesome": "^0.1.3",
     "ajv": "^6.5.0",
     "babel-polyfill": "^6.26.0",
+    "es3ify-loader": "^0.2.0",
     "font-awesome": "^4.7.0",
+    "i": "^0.3.6",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "npm": "^6.4.1",
     "style-loader": "^0.23.1",
     "vue": "^2.5.2",
     "vue-resource": "^1.5.1",
